[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "krayt-scout"
version = "0.1.0"
description = "Lightweight cyber recon tool for DNS, port scanning, and TLS inspection"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Krayt Consulting", email = "admin@krayt.pw"}
]
keywords = ["security", "recon", "penetration-testing", "dns", "tls", "port-scanner"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Security",
    "Topic :: System :: Networking",
]

dependencies = [
    "dnspython>=2.7.0",
    "python-nmap>=0.7.1",
    "rich>=14.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mypy>=1.8.0",
    "ruff>=0.1.0",
    "basedpyright>=1.0.0",
]

[project.urls]
Homepage = "https://krayt.pw"
Repository = "https://github.com/Krayt-Consulting/krayt-scout"
Issues = "https://github.com/Krayt-Consulting/krayt-scout/issues"

[project.scripts]
krayt-scout = "krayt_scout.main:main"

[tool.setuptools]
packages = ["krayt_scout"]

[tool.setuptools.package-data]
krayt_scout = ["py.typed"]

[tool.ruff]
target-version = "py310"
line-length = 88
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
    "TCH", # flake8-type-checking
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.lint.isort]
known-first-party = ["krayt_scout"]

[tool.basedpyright]
include = ["krayt_scout"]
exclude = ["**/__pycache__"]
typeCheckingMode = "standard"
pythonVersion = "3.14"
reportMissingImports = true
reportMissingTypeStubs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--cov=krayt_scout",
    "--cov-report=term-missing",
]
